--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,4 +1,4 @@
-/* *{
+*{
     font-family: "Bellota text", cursive;
     color: rgb(31, 31, 31);
 }
@@ -11,4 +11,4 @@
     "h h h"
     "m m s"
     "f f f";
-}  */
+} 
